<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.DetailsScreenFragment">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:elevation="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/movie_sample_poster"
            app:layout_constraintBottom_toBottomOf="@id/movie_backdrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_backdrop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/movie_poster"
            app:layout_constraintEnd_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/movie_poster">

            <TextView
                android:id="@+id/rating_textView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_view"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/constraint_two"
                app:layout_constraintStart_toStartOf="@id/constraint_two"
                app:layout_constraintTop_toTopOf="@id/constraint_two"
                tools:text="10.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_label"
            style="@style/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/title"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_backdrop" />

        <TextView
            android:id="@+id/release_label"
            style="@style/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_label"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />

        <TextView
            android:id="@+id/overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            style="@style/labels"
            app:layout_constraintEnd_toEndOf="@+id/movie_poster"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/constraint_two" />

        <TextView
            android:id="@+id/overview_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            tools:text="@string/sample_overview"
            style="@style/texts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/overview_label"
            app:layout_constraintTop_toBottomOf="@+id/overview_label" />

        <TextView
            android:id="@+id/title_text"
            style="@style/texts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/title_label"
            app:layout_constraintTop_toBottomOf="@+id/title_label"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/release_text"
            style="@style/texts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/release_label"
            app:layout_constraintTop_toBottomOf="@+id/release_label"
            tools:text="@string/sample_date" />

        <ImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/movie_sample_poster"
            tools:src="@tools:sample/backgrounds/scenic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>